--- a/public/views/partials/navbar-modern.ejs
+++ b/public/views/partials/navbar-modern.ejs
@@ -24,7 +24,7 @@
 
       <!-- Desktop Navigation -->
       <div class="navbar-nav hidden-sm">
-        <a href="/browse" class="navbar-nav-link story-link">Browse Projects</a>
+        <a href="<%= user ? '/home' : '/browse' %>" class="navbar-nav-link story-link">Browse Projects</a>
         <a href="/about" class="navbar-nav-link story-link">About</a>
         
         <% if (user) { %>
@@ -119,7 +119,7 @@
     <!-- Mobile Navigation -->
     <div class="navbar-mobile-nav" id="mobileNav">
       <div class="navbar-mobile-nav-content">
-        <a href="/browse" class="navbar-mobile-nav-link">Browse Projects</a>
+        <a href="<%= user ? '/home' : '/browse' %>" class="navbar-mobile-nav-link">Browse Projects</a>
         <a href="/about" class="navbar-mobile-nav-link">About</a>
         
         <% if (user) { %>
