Fix report issue link - redirect to signin for non-logged-in users

--- a/public/views/partials/footer-modern.ejs
+++ b/public/views/partials/footer-modern.ejs
@@ -19,7 +19,11 @@
             <h4>Support</h4>
             <div class="footer-links">
               <a href="/donate" class="footer-link">Donate</a>
-              <a href="/report" class="footer-link">Report Issue</a>
+              <% if (typeof user !== 'undefined' && user) { %>
+                <a href="/report" class="footer-link">Report Issue</a>
+              <% } else { %>
+                <a href="/signin" class="footer-link">Report Issue</a>
+              <% } %>
             </div>
           </div>
           <div>
