--- a/public/views/report-modern.ejs
+++ b/public/views/report-modern.ejs
@@ -239,7 +239,7 @@
 
                         <div class="form-group">
                             <label for="userEmail">Your Email</label>
-                            <input type="email" id="userEmail" name="userEmail" placeholder="<%= user?.email || 'your@email.com' %>" <% if (user?.email) { %>value="<%= user.email %>"<% } %> />
+                            <input type="email" id="userEmail" name="userEmail" placeholder="<%= user?.email || 'your@email.com' %>" <% if (user?.email) { %>value="<%= user.email %>" readonly<% } %> />
                         </div>
 
                         <div class="form-actions">
