Fix logo link - go to /home for signed-in users, / for guests

--- a/public/views/partials/navbar-modern.ejs
+++ b/public/views/partials/navbar-modern.ejs
@@ -3,7 +3,7 @@
   <div class="navbar-container">
     <div class="navbar-inner">
       <!-- Brand Logo -->
-      <a href="<%= (user ? '/browse' : '/') %>" class="navbar-brand">
+      <a href="<%= (user ? '/home' : '/') %>" class="navbar-brand">
         <h1>
           <span class="brand-span-primary">Proje</span><span class="brand-span-secondary">X</span><span class="brand-span-primary">ia</span>
         </h1>
